@@ -74,7 +74,7 @@ settings_xml_server = """<?xml version="1.0" encoding="ISO-8859-1"?>
   <table name="Table1" variant="holdem" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1" />
   <table name="Table2" variant="holdem" betting_structure="2-4-limit" seats="10" player_timeout="60" currency_serial="0" />
   <table name="Table3" variant="holdem" betting_structure="test18pokerclient" seats="10" player_timeout="600" muck_timeout="600" currency_serial="1" forced_dealer_seat="0" />
-
+  <table name="Table4" variant="holdem" betting_structure="ante-1-2-limit" seats="10" player_timeout="60" currency_serial="0" />
   <listen tcp="19480" />
 
   <cashier acquire_timeout="5" pokerlock_queue_timeout="30" user_create="yes"/>
@@ -1905,6 +1905,57 @@ class PokerAvatarTestCase(unittest.TestCase):
         d2.addCallback(self.dealTable, 101)
         d2.addCallback(self.loseConnection, 101)
         return defer.DeferredList((d, d2))
+
+    # ------------------------------------------------------------------------
+    def loseConnectionAnte(self, (client, packet), gameId):
+        table = self.service.getTable(gameId)
+        avatar0 = self.service.avatars[0]
+        avatar0.logout()
+        table.observers.append(avatar0)
+        avatar0.login((4, "user0", 32767))
+        avatar0.queuePackets()
+        count = 0
+        for packet in avatar0.resetPacketsQueue():
+            if packet.type == PACKET_POKER_PLAYER_CARDS:
+                count += 1
+                self.assertEquals(packet.game_id, gameId)
+            elif packet.type == PACKET_POKER_PLAYER_SELF:
+                count += 1
+                self.assertEquals(packet.game_id, gameId)
+                self.assertEquals(packet.serial, 4)
+            elif packet.type == PACKET_POKER_ANTE_REQUEST:
+                count += 1
+                self.assertEquals(packet.serial, 4)
+                self.assertEquals(packet.game_id, gameId)
+                self.assertEquals(packet.amount, 10)
+        self.assertEquals(count >= 3, True)
+        return (client, packet)
+    # ------------------------------------------------------------------------
+    def test45_possibleObserverLoggedInWithAnte(self):
+        """Test playing an actual hand all the way through"""
+        # The sequence of how to get yourself seated in a cash game was
+        # taken from the instructions at the top of pokerpackets.py
+        # labelled "How to sit at a cash game table ?"
+        d = self.client_factory[0].established_deferred
+        d.addCallback(self.setupCallbackChain)
+        d.addCallback(self.login, 0)
+        d.addCallback(self.joinTable, 0, 103, 'Table4', 'ante-1-2-limit')
+        d.addCallback(self.seatTable, 0, 103)
+        d.addCallback(self.buyInTable, 0, 103, 1000)
+        d.addCallback(self.sitTable, 0, 103)
+        d.addCallback(self.readyToPlay, 0, 103)
+        d2 = self.client_factory[1].established_deferred
+        d2.addCallback(self.setupCallbackChain)
+        d2.addCallback(self.login, 1)
+        d2.addCallback(self.joinTable, 1, 103, 'Table4', 'ante-1-2-limit')
+        d2.addCallback(self.seatTable, 1, 103)
+        d2.addCallback(self.buyInTable, 1, 103, 1000)
+        d2.addCallback(self.autoBlindAnte, 1, 103)
+        d2.addCallback(self.sitTable, 1, 103)
+        d2.addCallback(self.readyToPlay, 1, 103)
+        d2.addCallback(self.dealTable, 103)
+        d2.addCallback(self.loseConnectionAnte, 103)
+        return defer.DeferredList((d, d2))
     # -------------------------------------------------------------------------
     def tinyFunctions(self, (client, packet), id):
         avatar = self.service.avatars[id]
@@ -1921,7 +1972,7 @@ class PokerAvatarTestCase(unittest.TestCase):
     # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test44"
+#    loader.methodPrefix = "test45"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAvatarTestCase))
     return runner.TrialRunner(
